DO $$
BEGIN
    CREATE TYPE "ChatRole" AS ENUM ('USER', 'ASSISTANT');
EXCEPTION
    WHEN duplicate_object THEN NULL;
END
$$;

CREATE TABLE IF NOT EXISTS chat_conversations (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES users (id) ON DELETE RESTRICT,
    shop_id BIGINT NOT NULL REFERENCES shops (id) ON DELETE RESTRICT,
    title VARCHAR(255),
    started_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    last_message_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX IF NOT EXISTS idx_chat_conversations_user_shop_last_message
    ON chat_conversations (user_id, shop_id, last_message_at);

CREATE INDEX IF NOT EXISTS idx_chat_conversations_shop_id
    ON chat_conversations (shop_id);

CREATE TABLE IF NOT EXISTS chat_messages (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    conversation_id BIGINT NOT NULL REFERENCES chat_conversations (id),
    role "ChatRole" NOT NULL,
    content TEXT NOT NULL,
    ai_request_id BIGINT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX IF NOT EXISTS idx_chat_messages_conversation_created
    ON chat_messages (conversation_id, created_at);

CREATE INDEX IF NOT EXISTS idx_chat_messages_ai_request_id
    ON chat_messages (ai_request_id);
