-- Catalog and manual paid-sale tables. Customer, debt and AI references are
-- intentionally nullable until their tables are introduced in later migrations.

CREATE TABLE categories (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    shop_id BIGINT NOT NULL REFERENCES shops(id) ON DELETE RESTRICT,
    name VARCHAR(150) NOT NULL,
    status VARCHAR(20) NOT NULL DEFAULT 'ACTIVE',
    archived_at TIMESTAMPTZ,
    archived_by_user_id BIGINT REFERENCES users(id) ON DELETE RESTRICT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_categories_status CHECK (status IN ('ACTIVE', 'ARCHIVED')),
    CONSTRAINT ck_categories_archive CHECK (
        (status = 'ARCHIVED' AND archived_at IS NOT NULL AND archived_by_user_id IS NOT NULL)
        OR (status = 'ACTIVE' AND archived_at IS NULL AND archived_by_user_id IS NULL)
    )
);
CREATE INDEX idx_categories_shop_status ON categories(shop_id, status);

CREATE TABLE products (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    shop_id BIGINT NOT NULL REFERENCES shops(id) ON DELETE RESTRICT,
    category_id BIGINT REFERENCES categories(id) ON DELETE RESTRICT,
    name VARCHAR(255) NOT NULL,
    barcode VARCHAR(100),
    image_url VARCHAR(1000),
    unit VARCHAR(50) NOT NULL,
    selling_price_vnd BIGINT NOT NULL,
    cost_price_vnd BIGINT,
    tracked BOOLEAN NOT NULL DEFAULT FALSE,
    stock_quantity NUMERIC(15,3),
    status VARCHAR(20) NOT NULL DEFAULT 'ACTIVE',
    archived_at TIMESTAMPTZ,
    archived_by_user_id BIGINT REFERENCES users(id) ON DELETE RESTRICT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_products_shop_barcode UNIQUE(shop_id, barcode),
    CONSTRAINT ck_products_status CHECK (status IN ('ACTIVE', 'ARCHIVED')),
    CONSTRAINT ck_products_prices CHECK (selling_price_vnd >= 0 AND (cost_price_vnd IS NULL OR cost_price_vnd >= 0)),
    CONSTRAINT ck_products_stock CHECK (
        (tracked AND stock_quantity IS NOT NULL AND stock_quantity >= 0)
        OR (NOT tracked AND stock_quantity IS NULL)
    ),
    CONSTRAINT ck_products_archive CHECK (
        (status = 'ARCHIVED' AND archived_at IS NOT NULL AND archived_by_user_id IS NOT NULL)
        OR (status = 'ACTIVE' AND archived_at IS NULL AND archived_by_user_id IS NULL)
    )
);
CREATE INDEX idx_products_shop_status ON products(shop_id, status);
CREATE INDEX idx_products_category_id ON products(category_id);

CREATE TABLE sale_drafts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    shop_id BIGINT NOT NULL REFERENCES shops(id) ON DELETE RESTRICT,
    created_by_user_id BIGINT NOT NULL REFERENCES users(id) ON DELETE RESTRICT,
    customer_id BIGINT,
    customer_name VARCHAR(150),
    customer_phone VARCHAR(30),
    discount_vnd BIGINT NOT NULL DEFAULT 0,
    estimated_total_vnd BIGINT NOT NULL DEFAULT 0,
    initial_paid_vnd BIGINT NOT NULL DEFAULT 0,
    initial_payment_method VARCHAR(20),
    source_type VARCHAR(20) NOT NULL DEFAULT 'MANUAL',
    source_ai_request_id BIGINT,
    status VARCHAR(20) NOT NULL DEFAULT 'DRAFT',
    expires_at TIMESTAMPTZ NOT NULL,
    expired_at TIMESTAMPTZ,
    confirmed_sale_id BIGINT UNIQUE,
    confirmed_at TIMESTAMPTZ,
    cancelled_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_sale_drafts_status CHECK (status IN ('DRAFT', 'CONFIRMED', 'CANCELLED', 'EXPIRED')),
    CONSTRAINT ck_sale_drafts_source CHECK (source_type IN ('MANUAL', 'AI_VOICE')),
    CONSTRAINT ck_sale_drafts_payment_method CHECK (initial_payment_method IS NULL OR initial_payment_method IN ('CASH', 'TRANSFER')),
    CONSTRAINT ck_sale_drafts_amounts CHECK (
        discount_vnd >= 0 AND estimated_total_vnd >= 0
        AND initial_paid_vnd >= 0 AND initial_paid_vnd <= estimated_total_vnd
    ),
    CONSTRAINT ck_sale_drafts_initial_payment CHECK (
        (initial_paid_vnd = 0 AND initial_payment_method IS NULL)
        OR (initial_paid_vnd > 0 AND initial_payment_method IS NOT NULL)
    ),
    CONSTRAINT ck_sale_drafts_lifecycle CHECK (
        (status = 'DRAFT' AND confirmed_sale_id IS NULL AND confirmed_at IS NULL AND cancelled_at IS NULL AND expired_at IS NULL)
        OR (status = 'CONFIRMED' AND confirmed_sale_id IS NOT NULL AND confirmed_at IS NOT NULL AND cancelled_at IS NULL AND expired_at IS NULL)
        OR (status = 'CANCELLED' AND confirmed_sale_id IS NULL AND confirmed_at IS NULL AND cancelled_at IS NOT NULL AND expired_at IS NULL)
        OR (status = 'EXPIRED' AND confirmed_sale_id IS NULL AND confirmed_at IS NULL AND cancelled_at IS NULL AND expired_at IS NOT NULL)
    )
);
CREATE INDEX idx_sale_drafts_shop_creator_status_expiry ON sale_drafts(shop_id, created_by_user_id, status, expires_at);
CREATE INDEX idx_sale_drafts_source_ai_request_id ON sale_drafts(source_ai_request_id);

CREATE TABLE sale_draft_items (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    draft_id BIGINT NOT NULL REFERENCES sale_drafts(id) ON DELETE RESTRICT,
    product_id BIGINT REFERENCES products(id) ON DELETE RESTRICT,
    raw_product_name VARCHAR(255),
    product_name_snapshot VARCHAR(255),
    unit_snapshot VARCHAR(50),
    quantity NUMERIC(15,3) NOT NULL,
    unit_price_vnd BIGINT NOT NULL,
    line_total_vnd BIGINT NOT NULL,
    needs_review BOOLEAN NOT NULL DEFAULT FALSE,
    confidence_score NUMERIC(5,4),
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_sale_draft_items_amounts CHECK (quantity > 0 AND unit_price_vnd >= 0 AND line_total_vnd >= 0),
    CONSTRAINT ck_sale_draft_items_confidence CHECK (confidence_score IS NULL OR confidence_score BETWEEN 0 AND 1)
);
CREATE INDEX idx_sale_draft_items_draft_id ON sale_draft_items(draft_id);
CREATE INDEX idx_sale_draft_items_product_id ON sale_draft_items(product_id);

CREATE TABLE sales (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    shop_id BIGINT NOT NULL REFERENCES shops(id) ON DELETE RESTRICT,
    created_by_user_id BIGINT NOT NULL REFERENCES users(id) ON DELETE RESTRICT,
    customer_id BIGINT,
    customer_name_snapshot VARCHAR(150),
    customer_phone_snapshot VARCHAR(30),
    subtotal_vnd BIGINT NOT NULL,
    discount_vnd BIGINT NOT NULL DEFAULT 0,
    total_vnd BIGINT NOT NULL,
    paid_vnd BIGINT NOT NULL DEFAULT 0,
    sale_status VARCHAR(20) NOT NULL DEFAULT 'CONFIRMED',
    payment_status VARCHAR(20) NOT NULL,
    sold_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    voided_at TIMESTAMPTZ,
    voided_by_user_id BIGINT REFERENCES users(id) ON DELETE RESTRICT,
    void_reason VARCHAR(500),
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_sales_status CHECK (sale_status IN ('CONFIRMED', 'VOIDED')),
    CONSTRAINT ck_sales_payment_status CHECK (payment_status IN ('PAID', 'DEBT', 'PARTIAL')),
    CONSTRAINT ck_sales_amounts CHECK (
        subtotal_vnd >= 0 AND discount_vnd >= 0 AND total_vnd > 0
        AND total_vnd = subtotal_vnd - discount_vnd
        AND paid_vnd >= 0 AND paid_vnd <= total_vnd
    ),
    CONSTRAINT ck_sales_payment_balance CHECK (
        (payment_status = 'PAID' AND paid_vnd = total_vnd)
        OR (payment_status = 'DEBT' AND paid_vnd = 0)
        OR (payment_status = 'PARTIAL' AND paid_vnd > 0 AND paid_vnd < total_vnd)
    ),
    CONSTRAINT ck_sales_void_details CHECK (
        (sale_status = 'CONFIRMED' AND voided_at IS NULL AND voided_by_user_id IS NULL AND void_reason IS NULL)
        OR (sale_status = 'VOIDED' AND voided_at IS NOT NULL AND voided_by_user_id IS NOT NULL AND void_reason IS NOT NULL)
    )
);
CREATE INDEX idx_sales_shop_sold_at ON sales(shop_id, sold_at);
CREATE INDEX idx_sales_customer_sold_at ON sales(customer_id, sold_at);
CREATE INDEX idx_sales_payment_status ON sales(payment_status);
CREATE INDEX idx_sales_sale_status ON sales(sale_status);

ALTER TABLE sale_drafts ADD CONSTRAINT fk_sale_drafts_confirmed_sale
    FOREIGN KEY (confirmed_sale_id) REFERENCES sales(id) ON DELETE RESTRICT;

CREATE TABLE sale_items (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sale_id BIGINT NOT NULL REFERENCES sales(id) ON DELETE RESTRICT,
    product_id BIGINT NOT NULL REFERENCES products(id) ON DELETE RESTRICT,
    product_name_snapshot VARCHAR(255) NOT NULL,
    unit_snapshot VARCHAR(50) NOT NULL,
    quantity NUMERIC(15,3) NOT NULL,
    unit_price_vnd BIGINT NOT NULL,
    line_total_vnd BIGINT NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_sale_items_amounts CHECK (quantity > 0 AND unit_price_vnd >= 0 AND line_total_vnd >= 0)
);
CREATE INDEX idx_sale_items_sale_id ON sale_items(sale_id);
CREATE INDEX idx_sale_items_product_id ON sale_items(product_id);

CREATE TABLE payments (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sale_id BIGINT NOT NULL REFERENCES sales(id) ON DELETE RESTRICT,
    debt_id BIGINT,
    amount_vnd BIGINT NOT NULL,
    payment_method VARCHAR(20) NOT NULL,
    type VARCHAR(20) NOT NULL,
    transfer_reference VARCHAR(255),
    received_by_user_id BIGINT NOT NULL REFERENCES users(id) ON DELETE RESTRICT,
    received_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_payments_amount CHECK (amount_vnd > 0),
    CONSTRAINT ck_payments_method CHECK (payment_method IN ('CASH', 'TRANSFER')),
    CONSTRAINT ck_payments_type CHECK (type IN ('INITIAL', 'DEBT_REPAYMENT')),
    CONSTRAINT ck_payments_debt_link CHECK (
        (type = 'INITIAL' AND debt_id IS NULL)
        OR (type = 'DEBT_REPAYMENT' AND debt_id IS NOT NULL)
    )
);
CREATE INDEX idx_payments_sale_received_at ON payments(sale_id, received_at);
CREATE INDEX idx_payments_debt_received_at ON payments(debt_id, received_at);
