// =====================================================
// SMART LEDGER — PHASE 1 ERD
// =====================================================
//
// ID: BIGINT IDENTITY → Java Long
// Money: BIGINT VND
// Time: TIMESTAMPTZ, stored in UTC
// Quantity: NUMERIC(15,3)
//
// =====================================================


// =====================================================
// ENUMS
// =====================================================

Enum SystemRole {
  OWNER
  ADMIN
}

Enum UserStatus {
  ACTIVE
  DISABLED
}

Enum ShopStatus {
  ACTIVE
  INACTIVE
}

Enum CatalogStatus {
  ACTIVE
  ARCHIVED
}

Enum SaleStatus {
  CONFIRMED
  VOIDED
}

Enum PaymentStatus {
  PAID
  DEBT
  PARTIAL
}

Enum PaymentType {
  INITIAL
  DEBT_REPAYMENT
}

Enum PaymentMethod {
  CASH
  TRANSFER
}

Enum DebtStatus {
  OPEN
  SETTLED
}

Enum DraftStatus {
  DRAFT
  CONFIRMED
  CANCELLED
  EXPIRED
}

Enum DraftSourceType {
  MANUAL
  AI_VOICE
}

Enum ExpenseStatus {
  ACTIVE
  ARCHIVED
}

Enum AiInputType {
  TEXT
  AUDIO
  IMAGE
}

Enum AiMode {
  SALE
  EXPENSE
  INSIGHT
  REPLENISHMENT
}

Enum AiRequestStatus {
  PENDING
  SUCCEEDED
  FAILED
}

Enum ChatRole {
  USER
  ASSISTANT
}

Enum NotificationType {
  AI_REVIEW_REQUIRED
  SALE_CONFIRMED
  PAYMENT_RECEIVED
  DEBT_REMINDER
  LOW_STOCK
  SYSTEM
}


// =====================================================
// AUTH & TENANCY
// =====================================================

Table users {
  id bigint [pk, increment]

  display_name varchar(150) [not null]
  email varchar(255)
  phone varchar(30)
  avatar_url varchar(1000)

  system_role SystemRole [not null, default: 'OWNER']
  status UserStatus [not null, default: 'ACTIVE']

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    email
    phone
    system_role
  }

  Note: 'No password_hash. Phone and Google authentication are handled by Firebase.'
}


Table auth_identities {
  id bigint [pk, increment]

  user_id bigint [not null, unique]

  provider varchar(30) [not null, default: 'FIREBASE']
  provider_subject varchar(255) [not null, unique]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'One application user maps to one Firebase account. provider_subject stores the Firebase UID. Phone and Google are linked sign-in methods under that account.'
}


Table shops {
  id bigint [pk, increment]
  owner_id bigint [not null]

  name varchar(200) [not null]
  industry varchar(100) [not null]
  phone varchar(30)
  address varchar(500)

  status ShopStatus [not null, default: 'ACTIVE']

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    owner_id
    status
  }

  Note: 'One OWNER can own multiple shops. One shop has one OWNER in Phase 1.'
}


// =====================================================
// CATALOG & SIMPLE STOCK
// =====================================================

Table categories {
  id bigint [pk, increment]
  shop_id bigint [not null]

  name varchar(150) [not null]
  status CatalogStatus [not null, default: 'ACTIVE']

  archived_at timestamptz
  archived_by_user_id bigint

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (shop_id, status)
  }
}


Table products {
  id bigint [pk, increment]
  shop_id bigint [not null]
  category_id bigint

  name varchar(255) [not null]
  barcode varchar(100)
  image_url varchar(1000)
  unit varchar(50) [not null]

  selling_price_vnd bigint [not null]
  cost_price_vnd bigint

  tracked boolean [not null, default: false]
  stock_quantity numeric(15,3)

  status CatalogStatus [not null, default: 'ACTIVE']
  archived_at timestamptz
  archived_by_user_id bigint

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (shop_id, status)
    category_id
    (shop_id, barcode) [unique]
  }
}


// =====================================================
// CUSTOMERS
// =====================================================

Table customers {
  id bigint [pk, increment]
  shop_id bigint [not null]

  name varchar(150) [not null]
  normalized_phone varchar(30)

  status CatalogStatus [not null, default: 'ACTIVE']
  archived_at timestamptz
  archived_by_user_id bigint

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (shop_id, normalized_phone)
    (shop_id, status)
  }
}


// =====================================================
// SALE DRAFTS
// =====================================================

Table sale_drafts {
  id bigint [pk, increment]
  shop_id bigint [not null]
  created_by_user_id bigint [not null]
  customer_id bigint

  customer_name varchar(150)
  customer_phone varchar(30)

  discount_vnd bigint [not null, default: 0]
  estimated_total_vnd bigint [not null, default: 0]

  initial_paid_vnd bigint [not null, default: 0]
  initial_payment_method PaymentMethod

  source_type DraftSourceType [not null, default: 'MANUAL']
  source_ai_request_id bigint

  status DraftStatus [not null, default: 'DRAFT']

  expires_at timestamptz [not null]
  expired_at timestamptz

  confirmed_sale_id bigint [unique]
  confirmed_at timestamptz
  cancelled_at timestamptz

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (shop_id, created_by_user_id, status, expires_at)
    source_ai_request_id
  }

  Note: 'Draft does not affect revenue, debt or stock until confirmation.'
}


Table sale_draft_items {
  id bigint [pk, increment]
  draft_id bigint [not null]
  product_id bigint

  raw_product_name varchar(255)
  product_name_snapshot varchar(255)
  unit_snapshot varchar(50)

  quantity numeric(15,3) [not null]
  unit_price_vnd bigint [not null]
  line_total_vnd bigint [not null]

  needs_review boolean [not null, default: false]
  confidence_score numeric(5,4)

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    draft_id
    product_id
  }

  Note: 'Core requires a product from the same shop or a non-blank custom-item name and unit before persisting a draft item.'
}


// =====================================================
// CONFIRMED SALES
// =====================================================

Table sales {
  id bigint [pk, increment]
  shop_id bigint [not null]
  created_by_user_id bigint [not null]
  customer_id bigint

  customer_name_snapshot varchar(150)
  customer_phone_snapshot varchar(30)

  subtotal_vnd bigint [not null]
  discount_vnd bigint [not null, default: 0]
  total_vnd bigint [not null]
  paid_vnd bigint [not null, default: 0]

  sale_status SaleStatus [not null, default: 'CONFIRMED']
  payment_status PaymentStatus [not null]

  sold_at timestamptz [not null, default: `now()`]

  voided_at timestamptz
  voided_by_user_id bigint
  void_reason varchar(500)

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (shop_id, sold_at)
    (customer_id, sold_at)
    payment_status
    sale_status
  }

  Note: 'DEBT and PARTIAL sales require customer_id; Core validates this before confirmation and creates the matching debt in the same transaction.'
}


Table sale_items {
  id bigint [pk, increment]
  sale_id bigint [not null]
  product_id bigint [not null]

  product_name_snapshot varchar(255) [not null]
  unit_snapshot varchar(50) [not null]

  quantity numeric(15,3) [not null]
  unit_price_vnd bigint [not null]
  line_total_vnd bigint [not null]

  created_at timestamptz [not null, default: `now()`]

  indexes {
    sale_id
    product_id
  }
}


// =====================================================
// DEBTS & PAYMENTS
// =====================================================

Table debts {
  id bigint [pk, increment]
  sale_id bigint [not null, unique]
  customer_id bigint [not null]

  original_vnd bigint [not null]
  outstanding_vnd bigint [not null]

  status DebtStatus [not null, default: 'OPEN']

  created_at timestamptz [not null, default: `now()`]
  settled_at timestamptz

  indexes {
    (customer_id, status)
    status
  }
}


Table payments {
  id bigint [pk, increment]
  sale_id bigint [not null]
  debt_id bigint

  amount_vnd bigint [not null]
  payment_method PaymentMethod [not null]
  type PaymentType [not null]

  transfer_reference varchar(255)

  received_by_user_id bigint [not null]
  received_at timestamptz [not null, default: `now()`]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (sale_id, received_at)
    (debt_id, received_at)
  }
}


// =====================================================
// EXPENSES
// =====================================================

Table expenses {
  id bigint [pk, increment]
  shop_id bigint [not null]
  created_by_user_id bigint [not null]

  category varchar(150)
  description varchar(500)
  amount_vnd bigint [not null]

  payment_method PaymentMethod
  expense_at timestamptz [not null]

  // AI origin
  source_ai_request_id bigint

  status ExpenseStatus [not null, default: 'ACTIVE']
  archived_at timestamptz
  archived_by_user_id bigint

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (shop_id, expense_at)
    (shop_id, status)
    source_ai_request_id
  }
}


// =====================================================
// AI TRACE
// =====================================================

Table ai_requests {
  id bigint [pk, increment]
  shop_id bigint [not null]
  user_id bigint [not null]

  input_type AiInputType [not null]
  mode AiMode [not null]
  status AiRequestStatus [not null, default: 'PENDING']

  model varchar(150)
  model_version varchar(150)

  input_object_key varchar(1000)
  result_json jsonb
  error_message varchar(1000)

  delete_input_after timestamptz

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (shop_id, user_id, created_at)
    (shop_id, status)
  }
}


// =====================================================
// CHAT HISTORY
// =====================================================

// Một conversation = một cuộc hội thoại riêng.
// Việc hiển thị "Today / Yesterday / Previous 7 days / Older"
// được xử lý bằng last_message_at ở FE.

Table chat_conversations {
  id bigint [pk, increment]

  user_id bigint [not null]
  shop_id bigint [not null]

  title varchar(255)

  started_at timestamptz [not null, default: `now()`]
  last_message_at timestamptz [not null, default: `now()`]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, shop_id, last_message_at)
    shop_id
  }

  Note: 'A conversation is explicitly separated by creating a new chat, not by time.'
}


Table chat_messages {
  id bigint [pk, increment]

  conversation_id bigint [not null]

  role ChatRole [not null]
  content text [not null]

  // Link to AI processing when the message comes from AI
  ai_request_id bigint

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (conversation_id, created_at)
    ai_request_id
  }
}


// =====================================================
// NOTIFICATIONS
// =====================================================

// notification_events = "CHUYỆN GÌ ĐÃ XẢY RA?"
// Chỉ lưu nội dung sự kiện một lần.
//
// Ví dụ:
// AI_REVIEW_REQUIRED
// "AI phát hiện một khoản chi chưa chắc chắn"

Table notification_events {
  id bigint [pk, increment]

  shop_id bigint

  type NotificationType [not null]

  title varchar(255) [not null]
  body varchar(1000) [not null]

  // Entity liên quan
  // Ví dụ:
  // SALE -> sales.id
  // EXPENSE -> expenses.id
  // AI_REQUEST -> ai_requests.id
  entity_type varchar(100)
  entity_id bigint

  // Additional payload cho FE
  data_json jsonb

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (shop_id, created_at)
    (type, created_at)
    (entity_type, entity_id)
  }

  Note: 'Stores the notification event/content once. shop_id associates the event with a shop if applicable.'
}


// notification_recipients = "AI NHẬN THÔNG BÁO?"
// Mỗi user có một record riêng.
//
// Cùng một notification_event:
//     OWNER A -> read_at = NULL
//     OWNER B -> read_at = 10:30
//     ADMIN   -> read_at = 10:35

Table notification_recipients {
  id bigint [pk, increment]

  notification_event_id bigint [not null]
  user_id bigint [not null]

  read_at timestamptz

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, created_at)
    (user_id, read_at)
    (notification_event_id, user_id) [unique]
  }

  Note: 'One row per recipient. read_at is independent for each user.'
}


// =====================================================
// API IDEMPOTENCY
// =====================================================

Table api_idempotency_keys {
  id bigint [pk, increment]

  shop_id bigint [not null]
  user_id bigint [not null]

  operation varchar(100) [not null]
  idempotency_key varchar(255) [not null]
  request_hash varchar(128) [not null]

  resource_type varchar(100)
  resource_id bigint

  response_status integer
  response_body jsonb

  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (shop_id, operation, idempotency_key) [unique]
    expires_at
  }
}


// =====================================================
// AUDIT LOG
// =====================================================

Table audit_logs {
  id bigint [pk, increment]

  actor_user_id bigint
  shop_id bigint

  action varchar(100) [not null]
  entity_type varchar(100) [not null]
  entity_id bigint

  old_data jsonb
  new_data jsonb

  ip_address varchar(64)

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (shop_id, created_at)
    (entity_type, entity_id)
    actor_user_id
  }
}


// =====================================================
// RELATIONSHIPS
// =====================================================

// ---------- AUTH ----------

Ref: users.id - auth_identities.user_id
Ref: users.id < shops.owner_id


// ---------- CATALOG ----------

Ref: shops.id < categories.shop_id
Ref: users.id < categories.archived_by_user_id

Ref: shops.id < products.shop_id
Ref: categories.id < products.category_id
Ref: users.id < products.archived_by_user_id

Ref: shops.id < customers.shop_id
Ref: users.id < customers.archived_by_user_id


// ---------- SALE DRAFT ----------

Ref: shops.id < sale_drafts.shop_id
Ref: users.id < sale_drafts.created_by_user_id
Ref: customers.id < sale_drafts.customer_id
Ref: ai_requests.id < sale_drafts.source_ai_request_id

Ref: sale_drafts.confirmed_sale_id - sales.id

Ref: sale_drafts.id < sale_draft_items.draft_id
Ref: products.id < sale_draft_items.product_id


// ---------- SALES ----------

Ref: shops.id < sales.shop_id
Ref: users.id < sales.created_by_user_id
Ref: users.id < sales.voided_by_user_id
Ref: customers.id < sales.customer_id

Ref: sales.id < sale_items.sale_id
Ref: products.id < sale_items.product_id


// ---------- DEBT & PAYMENT ----------

Ref: sales.id - debts.sale_id
Ref: customers.id < debts.customer_id

Ref: sales.id < payments.sale_id
Ref: debts.id < payments.debt_id
Ref: users.id < payments.received_by_user_id


// ---------- EXPENSE ----------

Ref: shops.id < expenses.shop_id
Ref: users.id < expenses.created_by_user_id
Ref: users.id < expenses.archived_by_user_id
Ref: ai_requests.id < expenses.source_ai_request_id


// ---------- AI ----------

Ref: shops.id < ai_requests.shop_id
Ref: users.id < ai_requests.user_id


// ---------- CHAT ----------

Ref: users.id < chat_conversations.user_id
Ref: shops.id < chat_conversations.shop_id

Ref: chat_conversations.id < chat_messages.conversation_id
Ref: ai_requests.id < chat_messages.ai_request_id


// ---------- NOTIFICATION ----------

Ref: shops.id < notification_events.shop_id
Ref: notification_events.id < notification_recipients.notification_event_id
Ref: users.id < notification_recipients.user_id


// ---------- IDEMPOTENCY ----------

Ref: shops.id < api_idempotency_keys.shop_id
Ref: users.id < api_idempotency_keys.user_id


// ---------- AUDIT ----------

Ref: users.id < audit_logs.actor_user_id
Ref: shops.id < audit_logs.shop_id


// =====================================================
// VISUAL GROUPS
// =====================================================

TableGroup auth_and_tenancy {
  users
  auth_identities
  shops
}

TableGroup catalog_and_customers {
  categories
  products
  customers
}

TableGroup drafts_and_sales {
  sale_drafts
  sale_draft_items
  sales
  sale_items
}

TableGroup payment_and_expense {
  debts
  payments
  expenses
}

TableGroup ai_and_chat {
  ai_requests
  chat_conversations
  chat_messages
}

TableGroup notification {
  notification_events
  notification_recipients
}

TableGroup safety_and_audit {
  api_idempotency_keys
  audit_logs
}
